@@ -4,6 +4,7 @@ Changelog
 0.4 - (Unreleased)
 ------------------
 
+ * Added jQuery Tools tooltips to frontpage promotions. #2824 [thuliper]
  * Fit current navigation in lowest supported resolution [vincisas]
 
 0.3 - (2009-11-18)
